# stm32-tflm-demos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  audio_rec_dfsdm.c
Cube_Disp_FreeRTOS_USART/: .mxproject  .project  Cube_Disp_FreeRTOS_USART.ioc  STM32F407IGHx_FLASH.ld
Cube_Disp_FreeRTOS_USART/Inc/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Cube_Disp_FreeRTOS_USART/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Disp_FatFS_Template/: CMakeLists.txt
Disp_FatFS_Template/cmake/: FindCMSIS.cmake
Inc/: audio_playback.h  audio_rec_dfsdm.h  benchmarking.h  ffconf.h  gpio.h  image_show.h  main.h  plot_utils.h  sd_diskio.h  sdcard.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  ts_calibration.h  usart.h
Inc/tests/: silence_micro_features_data.h  test_micro_speech.h
STM3240G-EVAL-Cmake/: CMakeLists.txt  GDBCommands
STM3240G-EVAL-Cmake/Src/: main.c
STM3240G-EVAL-Cmake/cmake/: FindFreeRTOS.cmake  FindSTM32HAL.cmake
STM3240G-EVAL-Test/: .mxproject  .project  STM3240G-EVAL-Test.ioc  STM3240G-EVAL.xml  STM32F407IGHx_FLASH.ld
STM3240G-EVAL-Test/Inc/: FreeRTOSConfig.h  jdata_conf.h  libjpeg.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
STM3240G-EVAL-Test/Src/: freertos.c  libjpeg.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Src/: audio.c  audio_playback.c  audio_rec_dfsdm.c  benchmarking.cpp  gpio.c  image_show.c  main.c  main.cpp  main_functions.cc  plot_utils.cpp  sd_diskio.c  sdcard.c  sine_model_quantized.cc  stm32f4xx_it.c  stm32fxxx_it.c  ts_calibration.c  usart.c
Src/hello_world/: main_functions.cc  offline_model.cc  offline_model.h
Src/hello_world/disco_f413zh/: Makefile.inc  output_handler.cc
Src/hello_world/disco_f769ni/: Makefile.inc  constants.cc  output_handler.cc
Src/micro_speech/: feature_provider.cc  main_functions.cc  offline_model.cc  offline_model.cc.old  offline_model.h  offline_model.h.old  recognize_commands.cc  recognize_commands.h
Src/micro_speech/disco_f413zh/: Makefile.inc  audio_provider.cc  audio_provider.cc2  command_responder.cc
Src/micro_speech/disco_f769ni/: Makefile.inc  audio_provider.cc  command_responder.cc
Src/mnist/: constants.h  main_functions.cc  main_functions.cc.old  main_functions.h.old  misc.cc  misc.h  model_data.cc  model_data.h
Src/tests/: silence_micro_features_data.cc  test_micro_speech.cc
TFLite_Micro_STM3240G_EVAL_Hello_World/: CMakeLists.txt
TFLite_Micro_STM3240G_EVAL_Hello_World/Inc/: main.h
TFLite_Micro_STM3240G_EVAL_Hello_World/Src/: main.c  main_functions.cc
TFLite_Micro_STM3240G_EVAL_Hello_World/cmake/: FindCMSIS.cmake  FindCMSISNN.cmake  FindTensorFlowLite.cmake
TFLite_Micro_STM32F429_DISC_Hello_World/: .gitignore  CMakeLists.txt
TFLite_Micro_STM32F429_DISC_Hello_World/Inc/: color2.h  ffconf.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
TFLite_Micro_STM32F429_DISC_Hello_World/Src/: main.c  stm32f4xx_it.c.dontbuild  ts_calibration.c
TFLite_Micro_STM32F429_DISC_Hello_World/cmake/: FindSTM32BSP.cmake  FindTensorFlow.cmake
TFlite_hello_world/: CMakeLists.txt  compile_commands.json
TFlite_hello_world/Src/: main.c  main_functions.cc  output_handler.cc
TFlite_hello_world/cmake/: FindSTM32Discovery.cmake  FindTensorFlowLite.cmake
UART_Disp_Cube/: .mxproject  CMakeLists.txt  UART_Disp_Cube.ioc
UART_Disp_Cube/Inc/: main.h  usart.h
UART_Disp_Cube/Src/: gpio.c  main.c  stm32f4xx_hal_msp.c  usart.c
UART_Disp_Cube/cmake/: FindSTM32LL.cmake  FinduTensor.cmake
cmake/: FindCMSIS.cmake  FindCMSISNN.cmake  FindFATFS.cmake  FindFixedpoint.cmake  FindKWS.cmake  FindSTM32BSP.cmake  FindSTM32HAL.cmake  FindSTM32LL.cmake  FindTFLMExamples.cmake  FindTFLite.cmake  FindTensorFlowLite.cmake  FindUSBHost.cmake  gcc_stm32f4.cmake  tflm_compiler.cmake
docs/: Compiler.md  Debugging.md  File-Structure.md  Known-Issues---TODO's.md  Known-Issues-TODOs.md  Metrics.md  Patches.md  Usage.md
media/: .gitignore  README.md  convert.py  gen_micro_speech_files.sh  gen_mnist_files.sh  gen_sound.py  gen_wav_files.sh  mono2stereo.sh
models/: micro_speech.tflite  micro_speech_fully.tflite  micro_speech_lowlat.tflite  micro_speech_small.tflite  model.tflite
models/mnist/interpreter/: MNIST_full_quanitization-11.cc
models/mnist/tflite/: MNIST_full_quanitization-6.tflite
